--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
@@ -18,7 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "^0.68.2",
-    "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-modalize": "^2.0.13",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7"
