--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-camera": "~12.2.0",
-    "expo-print": "^11.2.0",
+    "expo-print": "~11.2.0",
     "expo-sharing": "^10.2.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -27,7 +27,8 @@
     "react-native-modalize": "^2.0.13",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-native-webview": "^11.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
