--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-camera": "~12.2.0",
+    "expo-image-manipulator": "~10.3.1",
     "expo-print": "~11.2.0",
     "expo-sharing": "^10.2.0",
     "expo-status-bar": "~1.3.0",
